[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["AWMBench"]

[project]
name = "AWMBench"
version = "0.1"
authors = [
    {name="Dominik Mattern", email="dominik.mattern@thi.de"},
    ]
description = "Testbench package for AWM algorithms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent", ]

[project.scripts]
